--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,15 @@
 ---
-import { SiMisskey, SiGithub } from "@icons-pack/react-simple-icons";
+import { Icon } from 'astro-icon/components';
 ---
 
 <footer class="bg-[#FCF8F1] py-8 px-4">
   <div class="max-w-6xl mx-auto text-center">
     <div class="flex justify-center gap-6 mb-4">
       <a href="https://github.com/AmaseCocoa" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-[#E78B30]">
-        <SiGithub size={24} />
+          <Icon name="simple-icons:github" size={24} />
       </a>
       <a href="https://i.amase.cc/@AmaseCocoa" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-[#E78B30]">
-        <SiMisskey size={24} />
+          <Icon name="simple-icons:github" size={24} />
       </a>
     </div>
     <p class="text-gray-600">&copy; 2025 AmaseCocoa. All Rights Reserved.</p>
