--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Search } from "lucide-react";
+import { Icon } from 'astro-icon/components';
 ---
 
 <header class="sticky top-0 z-50 py-4 px-6 text-[#291F18] bg-[#FCF8F1] border-b border-gray-300 flex items-center justify-between">
@@ -20,7 +20,7 @@ import { Search } from "lucide-react";
             <span class="absolute bottom-0 left-0 w-full h-0.5 bg-[#D4873B] transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 ease-in-out"></span>
         </a>
         <a href="/search" class="text-lg font-medium hover:text-[#D4873B] transition-colors relative group">
-            <span><Search size={20} /></span>
+            <span><Icon name="lucide:search" size={20} /></span>
         </a>
     </nav>
 </header>
