--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,6 +1,6 @@
 ---
-import MyWorks from "../components/react/MyWorks.tsx";
-import MyWorksBackend from "../components/react/MyWorksBackend.tsx";
+import MyWorks from "../components/works/Works.astro";
+import MyWorksBackend from "../components/works/Backend.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
