--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,10 +8,11 @@ import { Icon } from 'astro-icon/components';
       <a href="https://github.com/AmaseCocoa" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-[#E78B30]">
           <Icon name="simple-icons:github" size={24} />
       </a>
-      <a href="https://i.amase.cc/@AmaseCocoa" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-[#E78B30]">
-          <Icon name="simple-icons:github" size={24} />
+      <a href="https://ak.amase.cc/@AmaseCocoa" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-[#E78B30]">
+          <Icon name="simple-icons:activitypub" size={24} />
       </a>
     </div>
-    <p class="text-gray-600">&copy; 2025 AmaseCocoa. All Rights Reserved.</p>
+    <p class="text-gray-600">&copy; 2026 AmaseCocoa. All Rights Reserved.</p>
   </div>
+
 </footer>
